Bug 1714483 - Force-disable Nvidia FXAA, r=aosmond

While not enabled by default, it is openly exposed in the driver
settings and thus apparently not uncommon. Currently it causes
significant glitches for Firefox HW-WR, but also other text focused
apps (GTK 4).
While this should get fixed in the driver eventually, use the
workaround recommended by Nvidia to force-disable it for now.

Differential Revision: https://phabricator.services.mozilla.com/D125981